// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Equation Functions - Bar Bottom Strike 1`] = `
[
  0.7,
  0,
  0,
  0,
  0,
  0.7,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Bottom Strike 2`] = `
[
  0.35,
  0,
  0,
  0.0175,
  0,
  0.35,
  0,
  -0.1281,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Bottom Strike 3`] = `
[
  0.07,
  0,
  0,
  0,
  0,
  0.0826,
  0,
  -0.0056,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Top Strike 1`] = `
[
  0.7,
  0,
  0,
  0,
  0,
  0.7,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Top Strike 2`] = `
[
  0.35,
  0,
  0,
  0.0175,
  0,
  0.35,
  0,
  0.1498,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Top Strike 3`] = `
[
  0.07,
  0,
  0,
  0,
  0,
  0.0826,
  0,
  -0.0056,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;
